Update GitHub link in index.html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <img src="./images/linkedIn.jpg" class="icon mx-3" alt="LinkedIn" >
        </a>
        
-       <a href="https://github.com/hehehemangi">
+       <a href="https://github.com/syntaxhemi">
         <img src="./images/git-pink.jpg" class="icon mx-3" alt="GitHub">
        </a>
       </div>
